[nim] #Z89 Fixes overflowing text on /about_ureport page

--- a/static_assets/rapidsms_ureport/ureport/static/stylesheets/ureport_home.css
+++ b/static_assets/rapidsms_ureport/ureport/static/stylesheets/ureport_home.css
@@ -76,10 +76,10 @@ div.why-placeholder {
 }
 
 div.why-placeholder span {
-    font-size: 20px;
     padding-top: 10px;
     color: #07668c;
-    width: 85px;
+    width: 95px;
+    font-size: 16px;
     height: 50px;
     margin-left: 12px;
     display: block;
